--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "next": "^16.1.6",
+    "next": "14.2.30",
     "next-mdx-remote": "^5.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "styled-jsx": "^5.1.6"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
