--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint-config-next": "^14.2.35",
     "gray-matter": "^4.0.3",
-    "next": "14.2.30",
-    "next-mdx-remote": "^5.0.0",
+    "next": "^14.2.35",
+    "next-mdx-remote": "^6.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "remark-gfm": "^4.0.1",
