--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "remark-gfm": "^4.0.1",
-    "styled-jsx": "^5.1.6"
+    "styled-jsx": "^5.1.6",
+    "unist-util-remove": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
